--- a/index.html
+++ b/index.html
@@ -24,35 +24,47 @@
   </div>
 
   <div class="card-container">
-    <div class="card" id="basic">
-      <p class="title">Basic</p>
-      <p class="price"><span class="currency">&dollar;</span><span id="basicprice">199.99</span></p>
-      <ul class="info">
+    <div class="card basic" id="basic">
+      <p class="card-title">Basic</p>
+      <p class="card-price"><span id="currency">&dollar;</span>199.99</p>
+      <ul class="card-info">
+        <hr>
         <li>500 GB Storage</li>
+        <hr>
         <li>2 Users Allowed</li>
+        <hr>
         <li>Send up to 3 GB</li>
+        <hr>
       </ul>
       <a class="button" href="#">Learn More</a>
     </div>
   
     <div class="card professional" id="professional">
-      <p class="title">Professional</p>
-      <p class="price"><span class="currency">&dollar;</span><span id="professionalprice">124.99</span></p>
-      <ul class="info">
+      <p class="card-title">Professional</p>
+      <p class="card-price"><span id="currency">&dollar;</span>124.99</p>
+      <ul class="card-info">
+        <hr>
         <li>1 TB Storage</li>
+        <hr>
         <li>5 Users Allowed</li>
+        <hr>
         <li>Send up to 10 GB</li>
+        <hr>
       </ul>
       <a class="button" href="#">Learn More</a>
     </div>
   
-    <div class="card" id="master">
-      <p class="title">Master</p>
-      <p class="price"><span class="currency">&dollar;</span><span id="masterprice">399.99</span></p>
-      <ul class="info">
+    <div class="card master" id="master">
+      <p class="card-title">Master</p>
+      <p class="card-price"><span id="currency">&dollar;</span>399.99</p>
+      <ul class="card-info">
+        <hr>
         <li>2 TB Storage</li>
+        <hr>
         <li>10 Users Allowed</li>
+        <hr>
         <li>Send up to 20 GB</li>
+        <hr>
       </ul>
       <a class="button" href="#">Learn More</a>
     </div>
