--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="card-container">
     <div class="card basic" id="basic">
       <p class="card-title">Basic</p>
-      <p class="card-price"><span id="currency">&dollar;</span>199.99</p>
+      <p class="card-price card-basic"><span id="currency">&dollar;</span>199.99</p>
       <ul class="card-info">
         <hr>
         <li>500 GB Storage</li>
@@ -41,7 +41,7 @@
   
     <div class="card professional" id="professional">
       <p class="card-title">Professional</p>
-      <p class="card-price"><span id="currency">&dollar;</span>124.99</p>
+      <p class="card-price card-professional"><span id="currency">&dollar;</span>124.99</p>
       <ul class="card-info">
         <hr>
         <li>1 TB Storage</li>
@@ -51,12 +51,12 @@
         <li>Send up to 10 GB</li>
         <hr>
       </ul>
-      <a class="button" href="#">Learn More</a>
+      <a class="button button-inverted" href="#">Learn More</a>
     </div>
   
     <div class="card master" id="master">
       <p class="card-title">Master</p>
-      <p class="card-price"><span id="currency">&dollar;</span>399.99</p>
+      <p class="card-price card-master"><span id="currency">&dollar;</span>399.99</p>
       <ul class="card-info">
         <hr>
         <li>2 TB Storage</li>
